# sensor_hub

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  build.bat  build.sh  version.ini
cmake/: Findlibusb-1.0.cmake
debian/: changelog  control  copyright  rules  sensor-hub.doc-base
depends/libwdi/lib/: getopt.lib
depends/xsens/xsenswinusb/: XsensWinUsb.cat
doc/: Doxyfile.in  rn-sensor_hub.odt
info/: reg_keys_ublox_auto_detect.txt
manual/: Makefile  Makefile.in  build.bat  build.sh  chm.init  configuration.texi  http.texi  introduction.texi  macros.texi  manual.init  manual.texi.in  modbus.texi  processors.texi  quantities.texi  references.texi  sensor_hub.1.txt  sensors.texi  texi2html
manual/manual/: sensor_hub.info
manual/manual/chm/: manual.chm  manual.hhc  manual.hhk  manual.hhp  manual.html  manual_1.html  manual_2.html  manual_3.html  manual_abt.html  manual_toc.html
manual/manual/html/: index.html  manual.html  manual_1.html  manual_2.html  manual_3.html  manual_abt.html  manual_toc.html
manual/styles/: chm.css  styles.css
msvc/: CMakeLists.txt  build.bat  config.h.in  configure.bat  sensor_hub.rc  sensor_hub.sln  sensor_hub.vcproj  sensor_hub.vcxproj  version.js  version.rc
setup/: build.bat  build_msi.bat  config.wxi  install.sh  restart.bat  restart_elevated.bat  setup.wxs  start.bat  start_elevated.bat  stop.bat  stop_elevated.bat  version.js
setup/drivers/ublox/: ubloxusb.cat  ubloxusb.inf  ubloxusb.sys  ubloxusb64.sys
setup/files/: 99-sensor_hub.rules  99-ublox.rules  99-xsens.rules  sensor_hub-blacklist.conf  sensor_hub.conf  sensor_hub.service
src/: bus.h  config.cpp  config.h  config.h.in  configuration.cpp  configuration.h  daemon.cpp  datetime.cpp  datetime.h  device.cpp  device.h  functions.h  http.cpp  http.h  log.cpp  log.h  loop.cpp  loop.h  main.h  modbus.cpp  modbus.h  parser.h  port.h  processor.cpp  processor.h  quantities.cpp  quantities.h  serial.h  socket.h  spirit_x3.h  tcp.h  tools.h  types.cpp  types.h  ublox.cpp  ublox.h  ublox_impl.h  usb.cpp  usb.h  version.h.in  (+7 more)
src/devices/: dummy.cpp  dummy.h  gpsd.cpp  gpsd.h  nmea.cpp  nmea.h  regex.cpp  regex.h  runwell.cpp  runwell.h  ublox.cpp  ublox.h  ublox_impl.h  xsens.cpp  xsens.h  xsens_impl.h
src/driver/: install.h
src/processors/: acceleration_history.cpp  acceleration_history.h  fusion.cpp  fusion.h  signalk.cpp  signalk.h  signalk_converter.cpp  signalk_converter.h  signalk_server.cpp  signalk_server.h  statistics.cpp  statistics.h  tcp_push.cpp  tcp_push.h
src/winusb/: install.h
test/: asio_buffer_test.cpp  test.conf  test_asio.cpp  test_asio_buffer.cpp  test_common.h  test_datetime.cpp  test_device.cpp  test_fusion.cpp  test_gpsd.cpp  test_log.cpp  test_modbus.cpp  test_parse.cpp  test_processor.cpp  test_quantities.cpp  test_regex.cpp  test_runwell.cpp  test_sensor_hub.py  test_serial.cpp  test_signalk.cpp  test_spirit.cpp  test_tcp_push.cpp  test_tools.cpp  test_ublox.cpp  test_ublox_impl.cpp  test_usb.cpp  test_xsens.cpp  test_xsens_impl.cpp
tools/: clean_sensor_hub_backup.sh  create_install_sensor_hub_backup.sh  format_logstick.sh  inspect_modbus.py  install_sensor_hub_backup.sh  list_usb.cpp  listen_udp.c  listen_udp.py  runwell_mac_link.py  sign.bat  xsens_check.py
tools/modbus_viewer/: .gitignore  app.py  build.bat  version.txt
tools/modbus_viewer/modbus_viewer/gui/: main_window.py  plot_canvas.py
tools/modbus_viewer/modbus_viewer/model/: data_source.py
tools/runwell/: driver_config.c  driver_config.py
tools/sensor_viewer/: .gitignore  app.py  build.bat  requirements.txt  version.txt
tools/sensor_viewer/sensor_viewer/gui/: labelled_controls.py  main_window.py
tools/service_monitor/: app.py  build.bat
tools/service_monitor/service_monitor/gui/: tray_icon.py
